[gd_scene load_steps=2 format=3 uid="uid://barujq5xip6s"]

[ext_resource type="Script" uid="uid://84qw2f5fvcnn" path="res://scripts/main_menu.gd" id="1_fsby3"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_fsby3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -29.5
offset_right = 23.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="VBoxContainer/SettingsButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Settings"

[node name="GameNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Space"

[node name="LevelOneButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelOneLabel" type="Label" parent="VBoxContainer/LevelOneButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "1"

[node name="LevelTwoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelTwoLabel" type="Label" parent="VBoxContainer/LevelTwoButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "2"
